// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButtons StyledDeleteButton when isHovered prop is set should match expected styles 1`] = `
.c3 {
  position: relative;
  color: var(--colorsYin090);
  background-color: transparent;
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 24px;
  width: 24px;
}

.c3::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e90c";
  font-style: normal;
  font-weight: normal;
  vertical-align: middle;
  font-size: 16px;
  line-height: 16px;
  display: block;
}

.c4 a .c2,
.c4 button .c2 {
  color: var(--colorsActionMajor500);
}

.c4 a:hover .c2,
.c4 button:hover .c2 {
  color: var(--colorsActionMajor600);
}

.c4 a .c2,
.c4 button .c2 {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  margin-right: var(--spacing100);
}

.c4 a:focus .c2,
.c4 button:focus .c2 {
  color: var(--colorsActionMajorYin090);
}

.c5 a .c2,
.c5 button .c2 {
  color: var(--colorsActionMajor500);
}

.c5 a:hover .c2,
.c5 button:hover .c2 {
  color: var(--colorsActionMajor600);
}

.c5 a .c2,
.c5 button .c2 {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  margin-right: 0;
}

.c5 a:focus .c2,
.c5 button:focus .c2 {
  color: var(--colorsActionMajorYin090);
}

.c0 {
  background: transparent;
  border: none;
}

.c0.c0 {
  padding: var(--spacing000);
}

.c0:focus {
  background-color: transparent;
  outline: solid 3px var(--colorsSemanticFocus500);
  z-index: 1;
}

.c0:hover {
  cursor: pointer;
}

.c0::-moz-focus-inner {
  border: none;
}

.c0 .c2 {
  position: relative;
}

.c0 .c2:focus {
  border: none;
}

.c6.c6 > a .c2,
.c6.c6 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c7.c7 > a .c2,
.c7.c7 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c8.c8 > a .c2,
.c8.c8 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c8.c8 > a .c2,
.c8.c8 button .c2 {
  color: var(--colorsActionMajorYang100);
}

.c9.c9 > a .c2,
.c9.c9 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c9.c9 > a .c2,
.c9.c9 button .c2 {
  color: var(--colorsActionMajorYang100);
}

.c10.c10 > a .c2,
.c10.c10 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c11.c11 > a .c2,
.c11.c11 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c12.c12 > a .c2,
.c12.c12 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c12.c12 > a .c2,
.c12.c12 button .c2 {
  color: var(--colorsActionMajorYang100);
}

.c13.c13 > a .c2,
.c13.c13 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c14.c14 > a .c2,
.c14.c14 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c15.c15 > a .c2,
.c15.c15 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c16.c16 > a .c2,
.c16.c16 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c17.c17 > a .c2,
.c17.c17 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c17.c17 > a .c2,
.c17.c17 button .c2 {
  color: var(--colorsActionMajorYang100);
}

.c18.c18 .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsSemanticNegative500);
}

.c1.c1 {
  cursor: pointer;
  background-color: var(--colorsActionMajorYang100);
  border: 1px solid var(--colorsActionMinor200);
  margin-left: 8px;
  margin-bottom: 8px;
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  padding: 16px;
  background-color: var(--colorsSemanticNegative600);
  color: var(--colorsActionMajorYang100);
}

.c1.c1 .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsSemanticNegative500);
}

.c1.c1 .c2 {
  color: var(--colorsActionMajorYang100);
}

.c19.c19 .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsSemanticNegative500);
}

.c19.c19 .c2 {
  color: var(--colorsActionMajorYang100);
}

.c20.c20 .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c21.c21 .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c21.c21 .c2 {
  color: var(--colorsActionMajorYang100);
}

.c22.c22 .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c22.c22 .c2 {
  color: var(--colorsActionMajorYang100);
}

<button
  className="c0 c1"
  onClick={[Function]}
  onKeyDown={[Function]}
  type="button"
>
  <span
    className="c2 c3"
    data-component="icon"
    data-element="delete"
    fontSize="small"
    type="delete"
  />
</button>
`;

exports[`ActionButtons StyledEditAction when isHovered prop is set should match expected styles 1`] = `
.c0 {
  display: inline-block;
}

.c0 a,
.c0 button {
  font-size: 14px;
  color: var(--colorsActionMajor500);
}

.c0 a .c9,
.c0 button .c9 {
  color: var(--colorsActionMajor500);
}

.c0 a:hover,
.c0 button:hover {
  color: var(--colorsActionMajor600);
}

.c0 a:hover .c9,
.c0 button:hover .c9 {
  color: var(--colorsActionMajor600);
}

.c0 a:focus,
.c0 button:focus {
  background-color: var(--colorsSemanticFocus250);
}

.c0 a,
.c0 button {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  display: inline-block;
}

.c0 a .c9,
.c0 button .c9 {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  margin-right: 0;
}

.c0 a:hover,
.c0 button:hover {
  cursor: pointer;
}

.c0 a:focus,
.c0 button:focus {
  color: var(--colorsActionMajorYin090);
  outline: none;
}

.c0 a:focus .c9,
.c0 button:focus .c9 {
  color: var(--colorsActionMajorYin090);
}

.c0 button {
  background-color: transparent;
  border: none;
  padding: 0;
}

.c3 .c2 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  position: absolute;
}

.c4 .c2 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  position: absolute;
}

.c5 .c2 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  position: absolute;
}

.c6 .c2 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  position: absolute;
}

.c7 .c2 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  position: absolute;
}

.c8 .c2 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  position: absolute;
}

.c1.c1 > a,
.c1.c1 button {
  cursor: pointer;
  background-color: var(--colorsActionMajorYang100);
  border: 1px solid var(--colorsActionMinor200);
  margin-left: 8px;
  margin-bottom: 8px;
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  padding: 16px;
  background-color: var(--colorsActionMajor600);
  color: var(--colorsActionMajorYang100);
}

.c1.c1 > a .c9,
.c1.c1 button .c9 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c1.c1 > a .c9,
.c1.c1 button .c9 {
  color: var(--colorsActionMajorYang100);
}

.c1 .c2 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  position: absolute;
}

<span
  className="c0 c1"
  data-component="link"
  disabled={false}
>
  <a
    onKeyDown={[Function]}
  >
    <span
      className="c2 "
    />
  </a>
</span>
`;

exports[`ActionButtons StyledUndoButton when isHovered prop is set should match expected styles 1`] = `
.c3 {
  position: relative;
  color: var(--colorsYin090);
  background-color: transparent;
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 24px;
  width: 24px;
}

.c3::before {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: CarbonIcons;
  content: "\\e9aa";
  font-style: normal;
  font-weight: normal;
  vertical-align: middle;
  font-size: 16px;
  line-height: 16px;
  display: block;
}

.c4 a .c2,
.c4 button .c2 {
  color: var(--colorsActionMajor500);
}

.c4 a:hover .c2,
.c4 button:hover .c2 {
  color: var(--colorsActionMajor600);
}

.c4 a .c2,
.c4 button .c2 {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  margin-right: var(--spacing100);
}

.c4 a:focus .c2,
.c4 button:focus .c2 {
  color: var(--colorsActionMajorYin090);
}

.c5 a .c2,
.c5 button .c2 {
  color: var(--colorsActionMajor500);
}

.c5 a:hover .c2,
.c5 button:hover .c2 {
  color: var(--colorsActionMajor600);
}

.c5 a .c2,
.c5 button .c2 {
  display: inline-block;
  position: relative;
  vertical-align: middle;
  margin-right: 0;
}

.c5 a:focus .c2,
.c5 button:focus .c2 {
  color: var(--colorsActionMajorYin090);
}

.c0 {
  background: transparent;
  border: none;
}

.c0.c0 {
  padding: var(--spacing000);
}

.c0:focus {
  background-color: transparent;
  outline: solid 3px var(--colorsSemanticFocus500);
  z-index: 1;
}

.c0:hover {
  cursor: pointer;
}

.c0::-moz-focus-inner {
  border: none;
}

.c0 .c2 {
  position: relative;
}

.c0 .c2:focus {
  border: none;
}

.c6.c6 > a .c2,
.c6.c6 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c7.c7 > a .c2,
.c7.c7 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c8.c8 > a .c2,
.c8.c8 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c8.c8 > a .c2,
.c8.c8 button .c2 {
  color: var(--colorsActionMajorYang100);
}

.c9.c9 > a .c2,
.c9.c9 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c9.c9 > a .c2,
.c9.c9 button .c2 {
  color: var(--colorsActionMajorYang100);
}

.c10.c10 > a .c2,
.c10.c10 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c11.c11 > a .c2,
.c11.c11 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c12.c12 > a .c2,
.c12.c12 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c12.c12 > a .c2,
.c12.c12 button .c2 {
  color: var(--colorsActionMajorYang100);
}

.c13.c13 > a .c2,
.c13.c13 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c14.c14 > a .c2,
.c14.c14 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c15.c15 > a .c2,
.c15.c15 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c16.c16 > a .c2,
.c16.c16 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c17.c17 > a .c2,
.c17.c17 button .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c17.c17 > a .c2,
.c17.c17 button .c2 {
  color: var(--colorsActionMajorYang100);
}

.c18.c18 .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsSemanticNegative500);
}

.c19.c19 .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsSemanticNegative500);
}

.c19.c19 .c2 {
  color: var(--colorsActionMajorYang100);
}

.c20.c20 .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsSemanticNegative500);
}

.c20.c20 .c2 {
  color: var(--colorsActionMajorYang100);
}

.c21.c21 .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsSemanticNegative500);
}

.c22.c22 .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsSemanticNegative500);
}

.c23.c23 .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsSemanticNegative500);
}

.c24.c24 .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsSemanticNegative500);
}

.c25.c25 .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsSemanticNegative500);
}

.c26.c26 .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsSemanticNegative500);
}

.c27.c27 .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c1.c1 {
  cursor: pointer;
  background-color: var(--colorsActionMajorYang100);
  border: 1px solid var(--colorsActionMinor200);
  margin-left: 8px;
  margin-bottom: 8px;
  box-sizing: content-box;
  width: 16px;
  height: 16px;
  padding: 16px;
  background-color: var(--colorsActionMajor600);
  color: var(--colorsActionMajorYang100);
}

.c1.c1 .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c1.c1 .c2 {
  color: var(--colorsActionMajorYang100);
}

.c28.c28 .c2 {
  top: -2px;
  height: 16px;
  width: 16px;
  color: var(--colorsActionMajor500);
}

.c28.c28 .c2 {
  color: var(--colorsActionMajorYang100);
}

<button
  className="c0 c1"
  onClick={[Function]}
  onKeyDown={[Function]}
  type="button"
>
  <span
    className="c2 c3"
    data-component="icon"
    data-element="undo"
    fontSize="small"
    type="undo"
  />
</button>
`;

exports[`StyledActionsContainer when internalEditButton prop is set should have expected styles 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: absolute;
  right: 2px;
  top: 2px;
  z-index: 10;
}

<div
  className="c0"
/>
`;

exports[`StyledBlock should match expected styles 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  border: 1px solid var(--colorsUtilityMajor100);
  outline: none;
}

<div
  className="c0"
/>
`;

exports[`StyledFooter should match expected styles 1`] = `
.c0 {
  background-color: var(--colorsUtilityMajor025);
  box-shadow: inset 0px 1px 1px 0 rgba(0,0,0,0.1);
  color: var(--colorsUtilityYin090);
}

<div
  className="c0"
/>
`;
